Bug 155122 - Assertion failed when terminating headless soffice process using Ctrl+C in console on Windows
Summary: Assertion failed when terminating headless soffice process using Ctrl+C in co...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-02 09:57 UTC by Mike Kaganski
Modified: 2023-05-02 16:23 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-05-02 09:57:08 UTC
On Windows, using a debug build:

1. In console, start 'soffice --headless'
2. Press Ctrl+C

==> an application error dialog appears.
The failing assertion is in RequestHandler::~RequestHandler (desktop/source/app/officeipcthread.cxx), mIpcThread is not empty.

Expected result: the process must exit cleanly.
Comment 1 Mike Kaganski 2023-05-02 10:00:55 UTC
https://gerrit.libreoffice.org/c/core/+/151261
Comment 2 Commit Notification 2023-05-02 16:23:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d7823e0266d38dd83d7f824f6bafb3898ccbca75

tdf#155122: implement CtrlHandler on Windows

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.