tdf#155122: implement CtrlHandler on Windows

Change-Id: Ia766db91030528c320a27a2d608bd0ec0a34f31b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151261
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>